--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply bg-dark-sky;
+}
+
+@font-face {
+    font-family: 'Genshin';
+    font-style: normal;
+    font-weight: 500;
+    src: url('/fonts/genshin_font.ttf');
+}
+
+a {
+    font-family: 'Genshin';
+}
